# sell_ticket_microservers

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
auth_service/: CMakeLists.txt
auth_service/src/: main.cpp
doc/: implementation_plan.md
gateway_service/: CMakeLists.txt  README.md
gateway_service/doc/: 01_fix_issue.md  02_detailed_fixes_report.md  03_logging_guide.md
gateway_service/src/: env.h  main.cpp
gateway_service/src/internal/delivery/http/: SwaggerComponent.hpp  controller.h  service.h
gateway_service/src/internal/delivery/http/dto/: HealthDto.hpp
gateway_service/src/internal/logger/: PrettyLogger.h  ansi_colors.h
shared/: CMakeLists.txt
ticket_service/: CMakeLists.txt
ticket_service/src/: main.cpp
